tests/expectations/passes/check_interfaces/record_prototype_array_field_mismatch_fail.out
Error [ECHI03712013]: Field `data` in record `Entry` does not match the type required by interface `test.aleo/Vault`.
Expected:  [u8; 32]
Found:  [u8; 16]
    --> test:18:9
     |
   9 |           data: [u8; 32],
     |           ^^^^^^^^^^^^^^ expected by interface here
   ...
  18 |           data: [u8; 16],
     |           ^^^^^^^^^^^^^^ type mismatch here
     |
     = Field types and modes must match exactly.
